# photo-booth

./: Cargo.toml  README.md  package-lock.json  tailwind.config.js
migration/: Cargo.toml
src/: main.rs
src/controllers/: authentication.rs  bakery.rs  contact.rs  examples.rs  home.rs  mod.rs  register.rs  views.rs
src/entities/: bakery.rs  chef.rs  contact.rs  mod.rs  prelude.rs
src/migrator/: m20220101_000003_create_contact_table.rs  m20220101_000004_create_user_table.rs  mod.rs
src/model/: mod.rs
src/repositories/: bakeryRepository.rs  mod.rs
static/css/: application.css  tailwind.css
templates/: bakeries.html.hbs  click_to_edit.html.hbs  click_to_edit_form.html.hbs  contact.html.hbs  contact_show.html.hbs  index.html.hbs  login.html.hbs  new_contact.html.hbs  signup.html.hbs  work_cation.html.hbs
templates/layouts/: base.html.hbs  main.html.hbs  nav.html.hbs
