[package]
name = "photo-booth"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0"
shuttle-rocket = "0.40.0"
shuttle-runtime = "0.40.0"
shuttle-shared-db = { version = "0.40.0", features = ["postgres",  "sqlx"] }
tokio = "1.26.0"
#shuttle-seaorm = {git = "https://github.com/joshua-mo-143/shuttle-seaorm.git"}
rocket_dyn_templates = {features = ["handlebars"], version = "0.1.0"}
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
sqlx = "0.7.1"
